# OpenGL-Science

./: CMakeLists.txt  README.md
ogltest/: CMakeLists.txt  main.cpp
snake/: CMakeLists.txt  main.cpp
snake/src/: playground.cpp  playground.h  snake.cpp  snake.h
triangle/: CMakeLists.txt  main.cpp
